--- a/main/res/layout/makan_place_main.xml
+++ b/main/res/layout/makan_place_main.xml
@@ -1,53 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="false"
     android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/m_main_toolbar"
-        style="@style/ElliotTitleTextColor"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary" />
-
-    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/drawer_layout"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="false"
         android:orientation="vertical">
 
-
-        <LinearLayout
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/m_main_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="?attr/actionBarSize"
+            android:theme="@style/ElliotCyanAppBarWhiteText"
+            app:title="@string/app_name" />
 
-
-            <FrameLayout
-                android:id="@+id/content_frame"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"></FrameLayout>
-
-        </LinearLayout>
-
-        <ListView
-            android:id="@+id/left_drawer"
+        <FrameLayout
+            android:id="@+id/content_frame"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"
-            android:background="@color/m_color_white"
-            android:fitsSystemWindows="true" />
+            android:layout_height="match_parent"></FrameLayout>
 
-        <!--<android.support.design.widget.NavigationView-->
-        <!--android:id="@+id/nav_view"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:layout_gravity="start"-->
-        <!--android:fitsSystemWindows="true" />-->
+    </LinearLayout>
 
-    </android.support.v4.widget.DrawerLayout><!--</LinearLayout>-->
-</LinearLayout>
+    <ListView
+        android:id="@+id/left_drawer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@color/m_color_white"
+        android:fitsSystemWindows="true" />
+
+</android.support.v4.widget.DrawerLayout>
